<resources>
    <string name="app_name">i-Peste</string>
    <string name="Register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_to_login">Click to Login</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="Logout">Logout</string>
</resources>